--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -25,7 +25,7 @@
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-	height: 1600px;
+	min-height: 1600px;
 }
 .card__item {
 	flex: 1 1 592px;
