--- a/css/style.css
+++ b/css/style.css
@@ -670,7 +670,7 @@ h6 {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  height: 1600px;
+  min-height: 1600px;
 }
 
 .card__item {
@@ -702,10 +702,6 @@ h6 {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.team {
-  transition: opacity 1.2s ease;
-}
-
 .team__title {
   margin-bottom: 48px;
   font-weight: bold;
@@ -718,23 +714,15 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  column-gap: 15px;
   transition: all 1.2s ease;
+  margin-bottom: 32px;
 }
 
 .team-president__item {
   position: relative;
 }
 
-@media (min-width: 992px) {
-  .team-president__info {
-    opacity: 0;
-    transition: all 0.5s ease;
-  }
-
-  .team-president__item:hover .team-president__info {
-    opacity: 1;
-  }
-}
 .team-president__image {
   width: 100%;
 }
@@ -760,4 +748,102 @@ h6 {
   line-height: 110%;
   letter-spacing: -0.01em;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.team-worker {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  min-height: 530px;
+}
+
+.team-worker__item {
+  position: relative;
+  max-height: 155px;
+}
+
+.team-worker__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.team-worker__info {
+  position: absolute;
+  padding: 5px;
+  bottom: 0px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.team-worker__name {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 110%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.team-worker__profession {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 992px) {
+  .team-president__info,
+.team-worker__info {
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: all 0.3s ease;
+    background-color: transparent;
+  }
+
+  .team-president__item,
+.team-worker__item {
+    overflow: hidden;
+  }
+  .team-president__item::after,
+.team-worker__item::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all 0.3s;
+    z-index: 1;
+  }
+  .team-president__item:hover::after,
+.team-worker__item:hover::after {
+    opacity: 1;
+  }
+  .team-president__item:hover .team-president__info,
+.team-worker__item:hover .team-president__info {
+    opacity: 1;
+    transform: translateX(0%);
+    z-index: 2;
+  }
+  .team-president__item:hover .team-worker__info,
+.team-worker__item:hover .team-worker__info {
+    opacity: 1;
+    transform: translateX(0%);
+    z-index: 2;
+  }
+
+  .team-president__name,
+.team-president__profession,
+.team-worker__name {
+    color: #fff;
+  }
+
+  .team-worker__profession {
+    color: rgba(255, 255, 255, 0.6);
+  }
 }/*# sourceMappingURL=style.css.map */
