--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -59,7 +59,7 @@
 }
 .team-worker__info {
 	position: absolute;
-	padding: 5px;
+	padding: 10px 12px;
 	bottom: 0px;
 	background-color: rgba(255, 255, 255, 0.5);
 }
@@ -67,7 +67,7 @@
 	display: block;
 	margin-bottom: 5px;
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 110%;
 	letter-spacing: -0.01em;
 	color: rgba(0, 0, 0, 0.8);
@@ -75,7 +75,7 @@
 .team-worker__profession {
 	display: block;
 	font-weight: 500;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 110%;
 	letter-spacing: -0.01em;
 	color: rgba(0, 0, 0, 0.8);
