--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ div {
   cursor: default;
 }
 
+body {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -770,7 +775,7 @@ h6 {
 
 .team-worker__info {
   position: absolute;
-  padding: 5px;
+  padding: 10px 12px;
   bottom: 0px;
   background-color: rgba(255, 255, 255, 0.5);
 }
@@ -779,7 +784,7 @@ h6 {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 110%;
   letter-spacing: -0.01em;
   color: rgba(0, 0, 0, 0.8);
@@ -788,7 +793,7 @@ h6 {
 .team-worker__profession {
   display: block;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 110%;
   letter-spacing: -0.01em;
   color: rgba(0, 0, 0, 0.8);
