--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -31,10 +31,10 @@
 	flex: 1 1 592px;
 	margin-bottom: 16px;
 }
-.cart__image {
+.card__image {
 	width: 100%;
 }
-.project__cart-main {
+.project__card-main {
 	flex: 0 0 100%;
 }
 .card__link {
