--- a/scss/blocks/_slider.scss
+++ b/scss/blocks/_slider.scss
@@ -1,29 +1,52 @@
-.slider {
-	display: flex;
-	min-height: 100vh;
-	position: relative;
-}
-.slider__item {
+.slider-main {
 	width: 100%;
-	background-image: url(../img/slider-item-1.jpg);
-	background-repeat: no-repeat;
-	-moz-background-size: 100%;
-	-webkit-background-size: 100%;
-	-o-background-size: 100%;
-	background-size: 100%;
+	height: 100vh;
+	position: relative;
+
+	&__image {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	&__item {
+		width: 100%;
+		height: 100vh;
+		position: relative;
+	}
+	&__text {
+		position: absolute;
+		left: 3%;
+		bottom: 10%;
+		color: #fff;
+		text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.5);
+		font-family: Inter;
+		font-style: normal;
+		font-weight: 800;
+		font-size: calc((100vw - 320px) / (1920 - 320) * (64 - 32) + 32px);
+		line-height: 110%;
+		& > span {
+			display: block;
+		}
+	}
 }
-.slider__text {
-	position: absolute;
-	left: 3%;
-	bottom: 10%;
-	color: #fff;
-	text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.5);
-	font-family: Inter;
-	font-style: normal;
-	font-weight: 800;
-	font-size: calc((100vw - 320px) / (1920 - 320) * (64 - 32) + 32px);
-	line-height: 110%;
-	& > span {
-		display: block;
+
+.swiper-container-horizontal > .swiper-pagination-bullets {
+	bottom: 40px;
+	left: 60px;
+}
+
+.swiper-pagination {
+	text-align: start;
+	&-bullet {
+		width: 24px;
+		height: 3px;
+		border-radius: 0;
+		background-color: #fff;
+		opacity: 0.5;
+		transition: width 0.5s;
+		&-active {
+			width: 50px;
+			opacity: 1;
+		}
 	}
 }
