--- a/css/style.css
+++ b/css/style.css
@@ -924,6 +924,31 @@ h6 {
 
 .object-slider {
   position: relative;
+  pointer-events: none;
+}
+.object-slider::after {
+  content: "";
+  position: absolute;
+  width: 280px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  pointer-events: none;
+}
+.object-slider::before {
+  content: "";
+  position: absolute;
+  width: 280px;
+  height: 100%;
+  right: 0;
+  top: 0;
+  z-index: 5;
+  background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+  pointer-events: none;
 }
 .object-slider__item {
   width: 280px;
@@ -948,6 +973,9 @@ h6 {
   border-radius: 40px;
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
+.object-slider__button {
+  pointer-events: auto;
+}
 .object-slider__button_prev {
   position: absolute;
   top: 76px;
@@ -966,4 +994,132 @@ h6 {
   background-repeat: no-repeat;
   background-position: center;
   z-index: 10;
+}
+
+.contacts {
+  padding: 90px 0;
+  background-color: #f5f5f5;
+}
+.contacts-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__title {
+  margin-bottom: 40px;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 110%;
+  letter-spacing: -0.01em;
+}
+.contacts__text {
+  display: block;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+.contacts__text:last-child {
+  margin-bottom: 40px;
+}
+.contacts__info-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__about-us > a {
+  display: block;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.01em;
+  color: #88c558;
+}
+.contacts__tel {
+  margin-bottom: 20px;
+}
+.contacts__mail {
+  margin-bottom: 20px;
+}
+.contacts__address {
+  display: block;
+  margin-bottom: 40px;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.01em;
+  color: #000000;
+}
+.contacts__map {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.form {
+  max-width: 490px;
+  padding: 48px 60px;
+  background: #fff;
+}
+
+.form__title {
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
+.form__text {
+  margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form__name {
+  width: 100%;
+  padding: 17px 20px;
+  background: rgba(0, 0, 0, 0.06);
+  border-radius: 4px;
+  margin-bottom: 12px;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form__number {
+  width: 100%;
+  padding: 17px 20px;
+  background: rgba(0, 0, 0, 0.06);
+  border-radius: 4px;
+  margin-bottom: 12px;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form__message {
+  width: 100%;
+  height: 120px;
+  padding: 17px 20px;
+  background: rgba(0, 0, 0, 0.06);
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  margin-bottom: 12px;
+  resize: none;
+}
+
+.form__button {
+  width: 100%;
+  padding: 16px 0;
+  background: #a7cc4a;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+  letter-spacing: -0.01em;
+  color: #ffffff;
 }/*# sourceMappingURL=style.css.map */
