--- a/scss/blocks/_objects.scss
+++ b/scss/blocks/_objects.scss
@@ -49,6 +49,31 @@
 }
 .object-slider {
 	position: relative;
+	pointer-events: none;
+	&::after {
+		content: "";
+		position: absolute;
+		width: 280px;
+		height: 100%;
+		left: 0;
+		top: 0;
+		z-index: 5;
+		background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+		pointer-events: none;
+	}
+	&::before {
+		content: "";
+		position: absolute;
+		width: 280px;
+		height: 100%;
+		right: 0;
+		top: 0;
+		z-index: 5;
+		background: linear-gradient(90deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+		transform: matrix(-1, 0, 0, 1, 0, 0);
+		pointer-events: none;
+	}
 	&__item {
 		width: 280px;
 	}
@@ -74,6 +99,7 @@
 		transform: matrix(-1, 0, 0, 1, 0, 0);
 	}
 	&__button {
+		pointer-events: auto;
 		&_prev {
 			position: absolute;
 			top: 76px;
